@@ -2,13 +2,19 @@
 
 	* lib/commands/contents_command.rb: Add --lib-only option, remove
 	useless --list option.  Feature request #9498 by Martin DeMello.
-	* lib/rubygems/specification.rb (Gem::Specification#lib_files):
-	Restrict to only files in Gem::Specification#require_paths.
+	* lib/rubygems/specification.rb: Restrict to only files in
+	#require_paths.  Add #required_rubygems_version.  Feature request
+	#7780 by Eric Hodel.
 	* lib/rubygems/commands/dependency_command.rb: Display dependencies for
 	remote gems.  Feature request #12133 by Eric Hodel.  -r for reverse
 	dependencies is now -R.
 	* lib/rubygems/commands/specification_command.rb: Display
 	specifications for remote gems.  Feature request #12133 by Eric Hodel.
+	* lib/rubygems/installer.rb (Gem::Installer#install): Check
+	required_rubygems_version.
+	* lib/rubygems/user_interaction.rb
+	(Gem::UserInteraction#choose_from_list): Check result for EOF.  Fixes
+	bug #8018.  Patch by Jos Backus.
 
 2007-07-22  Eric Hodel  <drbrain@segment7.net>
 
